app/stylesheets/structure.css
.container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
}

.app {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  position: relative;
  max-width: 640px;
  height: 100%;
  margin: 0 auto;
  flex: 1;
}

.chat {
  flex: 1;
  padding: 15px;
  overflow-y: hidden;
}

.footer {
  padding: 10px;
}

.input {
  border: 1px solid #ccc;
  border-radius: 25px;
  color: black;
}
  .placeholder {
    color: #ccc;
  }

